--- a/portfolio.css
+++ b/portfolio.css
@@ -160,7 +160,7 @@
     }
     .grid-main__pagination ul{
         grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(4, 40%);
+        grid-template-rows: repeat(4, auto);
         row-gap: var(--space-largest) !important;
     }
     .v-card h2{
